// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataStreamSecurityItem component should change security value for the file 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`DataStreamSecurityItem component should change security value for the file 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -44,12 +44,11 @@
          <div
            class=\\"MuiSelect-root-581\\"
          >
            <div
              aria-haspopup=\\"true\\"
-             aria-owns=\\"menu-test.jpg\\"
-             aria-pressed=\\"true\\"
+             aria-pressed=\\"false\\"
              class=\\"MuiSelect-select-582 MuiSelect-selectMenu-585 MuiInputBase-input-611 MuiInput-input-596\\"
              id=\\"select-test.jpg\\"
              role=\\"button\\"
              tabindex=\\"0\\"
            >"
`;

exports[`DataStreamSecurityItem component should change security value for the file back to inherited 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`DataStreamSecurityItem component should change security value for the file back to inherited 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -44,12 +44,11 @@
          <div
            class=\\"MuiSelect-root-849\\"
          >
            <div
              aria-haspopup=\\"true\\"
-             aria-owns=\\"menu-test.jpg\\"
-             aria-pressed=\\"true\\"
+             aria-pressed=\\"false\\"
              class=\\"MuiSelect-select-850 MuiSelect-selectMenu-853 MuiInputBase-input-879 MuiInput-input-864\\"
              id=\\"select-test.jpg\\"
              role=\\"button\\"
              tabindex=\\"0\\"
            >"
`;

exports[`DataStreamSecurityItem component should render default view with inherited security 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root dataStreamFileName MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
  >
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
      title="test.jpg"
    >
      test.jpg
    </a>
    <span
      class="MuiTypography-root MuiTypography-caption"
    >
      Inherited
    </span>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
  >
    <div
      class="MuiFormControl-root"
      style="width: 100%;"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled Mui-required Mui-required"
        data-shrink="true"
        id="Test Policy Dropdown Label-label"
      >
        Test Policy Dropdown Label
        <span
          class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
        >
           *
        </span>
      </label>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        required=""
        validation="function required(value) {
  return value ? undefined : _validationErrors[\\"default\\"].validationErrors.required;
}"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby=" Test Policy Dropdown Label"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
          id="Test Policy Dropdown Label"
          role="button"
          tabindex="0"
        >
          Theses Assessors
        </div>
        <input
          aria-labelledby="Test Policy Dropdown Label-label"
          id="Test Policy Dropdown Label"
          name="test.jpg"
          type="hidden"
          value="2"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataStreamSecurityItem component should render default view with overridden security 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root dataStreamFileName MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
  >
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
      title="test.jpg"
    >
      test.jpg
    </a>
    <span
      class="MuiTypography-root MuiTypography-caption"
    >
      Overridden
    </span>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
  >
    <div
      class="MuiFormControl-root"
      style="width: 100%;"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled Mui-required Mui-required"
        data-shrink="true"
        id="Test Policy Dropdown Label-label"
      >
        Test Policy Dropdown Label
        <span
          class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
        >
           *
        </span>
      </label>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        required=""
        validation="function required(value) {
  return value ? undefined : _validationErrors[\\"default\\"].validationErrors.required;
}"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby=" Test Policy Dropdown Label"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
          id="Test Policy Dropdown Label"
          role="button"
          tabindex="0"
        >
          Theses Assessors
        </div>
        <input
          aria-labelledby="Test Policy Dropdown Label-label"
          id="Test Policy Dropdown Label"
          name="test.jpg"
          type="hidden"
          value="2"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataStreamSecurityItem component should render view for a subsequent file 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root dataStreamFileName MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
  >
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
      title="test.jpg"
    >
      test.jpg
    </a>
    <span
      class="MuiTypography-root MuiTypography-caption"
    >
      Overridden
    </span>
  </div>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6"
  >
    <div
      class="MuiFormControl-root"
      style="width: 100%;"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled Mui-required Mui-required"
        data-shrink="true"
        id="Test Policy Dropdown Label-label"
      >
        Test Policy Dropdown Label
        <span
          class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
        >
           *
        </span>
      </label>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        required=""
        validation="function required(value) {
  return value ? undefined : _validationErrors[\\"default\\"].validationErrors.required;
}"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby=" Test Policy Dropdown Label"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
          id="Test Policy Dropdown Label"
          role="button"
          tabindex="0"
        >
          Theses Assessors
        </div>
        <input
          aria-labelledby="Test Policy Dropdown Label-label"
          id="Test Policy Dropdown Label"
          name="test.jpg"
          type="hidden"
          value="2"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
